--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@babel/standalone": "^7.24.5",
     "@monaco-editor/react": "^4.6.0",
+    "@typescript/ata": "^0.9.4",
+    "allotment": "^1.20.1",
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
